<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/opcion_menu_perfil" />
        <item
            android:id="@+id/nav_servicios"
            android:title="@string/opcion_menu_servicio" />
        <item
            android:id="@+id/nav_barberos"
            android:title="@string/opcion_menu_barberos" />
        <item
            android:id="@+id/nav_ventas"
            android:title="@string/opcion_menu_ventas" />
        <item
            android:id="@+id/nav_caja"
            android:title="@string/opcion_menu_caja" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/opcion_menu_feedback" />
        </menu>
    </item>

</menu>
